Books can be saved into the different states now.

--- a/books/Base.lproj/Main.storyboard
+++ b/books/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
         <!--Book List-->
@@ -43,7 +44,7 @@
                                 </tableViewCellContentView>
                                 <animations/>
                                 <connections>
-                                    <segue destination="rfy-0O-jij" kind="push" identifier="detailsSegue" id="BmI-wx-kdK"/>
+                                    <segue destination="rfy-0O-jij" kind="push" identifier="detailsSegue" id="Mia-ya-Y0q"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -53,7 +54,13 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Item" id="p31-TG-QQh"/>
-                    <navigationItem key="navigationItem" title="Book List" id="eBb-GO-saU"/>
+                    <navigationItem key="navigationItem" title="Book List" id="eBb-GO-saU">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="vEK-K1-cdq">
+                            <connections>
+                                <segue destination="pS6-3L-WFP" kind="modal" identifier="addBookSegue" id="TEf-Jy-hbV"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b9R-CH-CqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -132,30 +139,34 @@
                         <segue destination="xOz-uh-Uha" kind="relationship" relationship="viewControllers" id="3JW-IV-0K3"/>
                         <segue destination="1rq-F2-SE1" kind="relationship" relationship="viewControllers" id="Rdw-Rq-chs"/>
                         <segue destination="ouW-H7-g4X" kind="relationship" relationship="viewControllers" id="7S1-dH-5Dj"/>
-                        <segue destination="Wle-Mf-mK6" kind="relationship" relationship="viewControllers" id="Da3-bk-ljE"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VjV-82-6SV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1842" y="-320"/>
         </scene>
-        <!--Add Books-->
-        <scene sceneID="pF0-Cd-P5P">
+        <!--Search Results View Controller-->
+        <scene sceneID="IMM-IK-owI">
             <objects>
-                <navigationController id="Wle-Mf-mK6" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Add Books" id="5pc-c3-vFJ"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YXG-U9-rSo">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                <viewController id="Lqd-C4-BX8" customClass="SearchResultsViewController" customModule="books" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eaS-Su-O3Q">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="3gJ-ah-QZ0">
+                                <rect key="frame" x="150" y="274" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <animations/>
+                            </activityIndicatorView>
+                        </subviews>
                         <animations/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="Vv0-vd-DQH" kind="relationship" relationship="rootViewController" id="QDb-Z8-CYH"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Yl2-LC-IzT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="PZP-i4-6Qx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AUJ-XT-hYj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1322" y="1153"/>
+            <point key="canvasLocation" x="1461" y="-745"/>
         </scene>
         <!--Add New Book-->
         <scene sceneID="6SY-tW-5aC">
@@ -184,11 +195,6 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Add New Book" id="MUE-h5-Wns">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="erd-oK-A82">
-                            <connections>
-                                <action selector="cancelWasPressed:" destination="KX6-RT-Bgh" id="lvE-ip-ZBg"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="vlA-iB-g0M">
                             <connections>
                                 <action selector="doneWasPressed:" destination="KX6-RT-Bgh" id="qzd-Ys-UcB"/>
@@ -202,23 +208,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tYd-rs-rKU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-426" y="1534"/>
+            <point key="canvasLocation" x="1461" y="-98"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="FvM-ZY-N9C">
+        <!--Navigation Controller-->
+        <scene sceneID="d44-Iz-L7K">
             <objects>
-                <viewController id="jJJ-5C-1IG" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="87V-au-4dR">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <navigationController id="pS6-3L-WFP" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OVV-1g-12l">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="bBM-RB-Ndd"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rlG-La-kLT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="RLM-Yq-lvb" kind="relationship" relationship="rootViewController" id="ucA-7D-k5O"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RGc-lT-uPD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18" y="800"/>
+            <point key="canvasLocation" x="488" y="-222"/>
         </scene>
         <!--Add Books-->
         <scene sceneID="0aL-A1-3Fw">
@@ -227,54 +234,49 @@
                     <view key="view" contentMode="scaleToFill" id="87c-JQ-BID">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="EOd-Tk-otY"/>
-                    <navigationItem key="navigationItem" title="Add Books" id="yDi-Z7-Ie2"/>
-                    <connections>
-                        <segue destination="jJJ-5C-1IG" kind="push" id="lnT-zE-hYn"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7MC-gC-qUv" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-426" y="800"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="SsG-qO-Juz">
-            <objects>
-                <viewController id="Vv0-vd-DQH" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="yyM-0W-6Wl">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="jh3-oX-80G">
-                                <rect key="frame" x="106" y="135" width="108" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan a barcode to add a book" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oqK-1r-Xy8">
+                                <rect key="frame" x="20" y="80" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <animations/>
-                                <state key="normal" title="Scan a Barcode"/>
-                                <connections>
-                                    <segue destination="RLM-Yq-lvb" kind="push" id="YgJ-VT-key"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Kig-Xn-h4t">
-                                <rect key="frame" x="109" y="198" width="102" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" id="fRc-A1-jhP">
+                                <rect key="frame" x="0.0" y="109" width="320" height="459"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <animations/>
-                                <state key="normal" title="Enter Manually"/>
-                                <connections>
-                                    <segue destination="KX6-RT-Bgh" kind="push" id="9U7-qN-j6O"/>
-                                </connections>
-                            </button>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="V9Q-t7-Fot"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="EOd-Tk-otY"/>
+                    <navigationItem key="navigationItem" title="Add Books" id="yDi-Z7-Ie2">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="3fF-kh-qUy">
+                            <connections>
+                                <action selector="cancelWasPressed:" destination="RLM-Yq-lvb" id="Uit-Gj-Jz3"/>
+                            </connections>
+                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem id="9Cp-bi-6VJ">
+                                <connections>
+                                    <segue destination="KX6-RT-Bgh" kind="push" identifier="addManuallySegue" id="vh4-my-6c8"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="edit" id="Lnu-8a-7Bd"/>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="cameraPreviewPlaceholder" destination="fRc-A1-jhP" id="ioU-1Z-7QZ"/>
+                        <segue destination="Lqd-C4-BX8" kind="push" identifier="isbnDetectedSegue" id="h61-0h-Zcg"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AUh-vI-iad" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7MC-gC-qUv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-899" y="1153"/>
+            <point key="canvasLocation" x="952" y="-286"/>
         </scene>
         <!--Information-->
         <scene sceneID="dhn-Z4-2RQ">
@@ -292,17 +294,6 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="GVD-on-3Zv">
-                                <rect key="frame" x="20" y="518" width="280" height="30"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <animations/>
-                                <state key="normal" title="Delete">
-                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="deleteIsPressed:" destination="rfy-0O-jij" eventType="touchUpInside" id="Pyl-V7-sn9"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="f9A-ld-euG">
                                 <rect key="frame" x="20" y="92" width="111" height="142"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -316,6 +307,17 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="GVD-on-3Zv">
+                                <rect key="frame" x="20" y="465" width="280" height="30"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <animations/>
+                                <state key="normal" title="Delete">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="deleteIsPressed:" destination="rfy-0O-jij" eventType="touchUpInside" id="Pyl-V7-sn9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
